routing and visuals

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -35,7 +35,7 @@
             <div style="font-size:1.2em">
                 <br />
             </div>
-            <ul class="featurelist" style="font-size:small">
+            <ul class="featurelist" style="font-size:small; margin-top: -4px;">
                 <li><span class="psudolinksingle" onclick="singlesitenav('news')">News</span>
                 </li>
                 <li><span class="psudolinksingle" onclick="singlesitenav('forum')">Forum</span>
@@ -69,7 +69,7 @@
 
             </nav>
 
-            <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
+            <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 0 : Revision 0</div>
         <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
     </header>
     <header style="padding-top:10px; display:none" id="news">
@@ -85,7 +85,7 @@
                 <li><span class="psudolinksingle" onclick="singlesitenav('faq')">FAQ</span>
                 </li>
             </ul>
-        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 4 : Production 0 : Revision 0</div>
         upcoming blog
         
     </header>
@@ -102,7 +102,7 @@
                 <li><span class="psudolinksingle" onclick="singlesitenav('faq')">FAQ</span>
                 </li>
             </ul>
-        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 4 : Production 0 : Revision 0</div>
         upcoming forum
       
     </header>
@@ -119,7 +119,7 @@
                 <li><span class="psudolinksingle" onclick="singlesitenav('faq')">FAQ</span>
                 </li>
             </ul>
-        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 4 : Production 0 : Revision 0</div>
         <div id="lightIRC" style="height:92%; text-align:center;">
         </div>
 
@@ -144,7 +144,7 @@
                 <li><span class="psudolinksingle" onclick="singlesitenav('faq')">FAQ</span>
                 </li>
             </ul>
-        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 4 : Production 0 : Revision 0</div>
         <div style="color:white; width:600px; margin:0 auto;">
             <p>Q: How Can I install the web installer
                 <br />A: copy the contence of the file to a workable location like %appdata% when started it will create a ygopro folder. Then copy your DevPro or YGOPro scripts pics and decks to the folder.</p>
