Schema and G-string fix

--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -33,7 +33,7 @@
         <div onclick="maxrestore();"></div>
         <div onclick="win.minimize();"></div>
     </div>
-    <main style='height: 100%; background:rgba(0,0,0,.97);'>
+    <main style='height: 100%; background:black'>
         <div style="text-align: center;">
 
             <div id="salvationdevelopment" height="92%">
