--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -263,8 +263,8 @@
 
         </div>
     </footer>
-    <script src="js/launcher.js">
-        $.getScript(sitelocationdir[mode] + "/js/launcher.js",
+    <script>
+        $.getScript(sitelocationdir[mode] + "/js/launcher.js");
     </script>
     <script>
         (function (i, s, o, g, r, a, m) {
