--- a/server/http/index.html
+++ b/server/http/index.html
@@ -163,7 +163,7 @@
     <footer class="superfooter">
         <div style='max-width:1000px; margin:0 auto'>
             <span itemscope itemtype="http://schema.org/SoftwareApplication">YGOPro</span> &amp 
-            <span itemscope itemtype="http://schema.org/SoftwareApplication">Salvation Server</span>span> are not affliated with
+            <span itemscope itemtype="http://schema.org/SoftwareApplication">Salvation Server</span> are not affliated with
             <span itemscope itemtype="http://schema.org/Organization" itemprop="name">Konami</span>span or 
             <span itemscope itemtype="http://schema.org/Person" itemprop="name">Kazuki Takahashi</span>. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
     </footer>
