--- a/server/http/index.html
+++ b/server/http/index.html
@@ -58,9 +58,15 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a href="http://d-h.st/iVP">Full Windows Client </a>
+                    <li><a href=" https://www.mediafire.com/?b8w6q242c1ahq52">Full Windows Client </a>
                         <span itemprop="downloadURL" style="display:none">http://d-h.st/iVP</span>
-                        <span itemprop="fileSize" style="display:none">473MB</span>
+                        <span itemprop="fileSize" style="display:none">477MB</span>
+                        <span itemprop="operatingSystem" style="display:none">Windows</span>
+                        <span itemprop="SoftwarVersion" style="display:none">4.0.0</span>
+                    </li>
+                    <li><a href=" https://ygopro.us/setup.exe">Mirror 1 </a>
+                        <span itemprop="downloadURL" style="display:none">http://d-h.st/iVP</span>
+                        <span itemprop="fileSize" style="display:none">477MB</span>
                         <span itemprop="operatingSystem" style="display:none">Windows</span>
                         <span itemprop="SoftwarVersion" style="display:none">4.0.0</span>
                     </li>
