--- a/server/http/index.html
+++ b/server/http/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Salvation Development Massively Multiplayer Online Yu-Gi-Oh! Simulator Version 0.02.0.00</title>
+    <title>YGOPro Salvation Server  Online Yu-Gi-Oh! Simulator Version 4.0.0</title>
     <link rel="shortcut icon" href="/favicon.png" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -64,10 +64,16 @@
                         <span itemprop="operatingSystem" style="display:none">Windows</span>
                         <span itemprop="SoftwarVersion" style="display:none">4.0.0</span>
                     </li>
-                    <li><a href=" https://ygopro.us/setup.exe">Mirror 1 </a>
-                        <span itemprop="downloadURL" style="display:none">http://d-h.st/iVP</span>
+                    <li><a href="https://ygopro.us/setup.exe">Windows Mirror 1 </a>
+                        <span itemprop="downloadURL" style="display:none">https://ygopro.us/setup.exe</span>
                         <span itemprop="fileSize" style="display:none">477MB</span>
                         <span itemprop="operatingSystem" style="display:none">Windows</span>
+                        <span itemprop="SoftwarVersion" style="display:none">4.0.0</span>
+                    </li>
+                    <li><a href=" https://ygopro.us/client.tar.gz">Win/Linux32 Tarball</a>
+                        <span itemprop="downloadURL" style="display:none">https://ygopro.us/client.tar.gz</span>
+                        <span itemprop="fileSize" style="display:none">587MB</span>
+                        <span itemprop="operatingSystem" style="display:none">Linux 32</span>
                         <span itemprop="SoftwarVersion" style="display:none">4.0.0</span>
                     </li>
                     <!--
