--- a/server/http/index.html
+++ b/server/http/index.html
@@ -120,7 +120,7 @@
                 </li>
             </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 4 : Production 0 : Revision 0</div>
-        <iframe src="about:blank" height="100%" width="100%" style="min-height: 422px; border: none;"></iframe>
+        <iframe src="http://ygopro.us:8080/forums/" height="100%" width="100%" style="min-height: 422px; border: none;"></iframe>
       
     </header>
     <header style="padding-top:10px" id="chat">
