--- a/server/http/index.html
+++ b/server/http/index.html
@@ -64,13 +64,13 @@
                         <span itemprop="operatingSystem" style="display:none">Windows</span>
                         <span itemprop="SoftwarVersion" style="display:none">4.0.0</span>
                     </li>
-                    <li><a href="https://ygopro.us/setup.exe">Windows Mirror 1 </a>
-                        <span itemprop="downloadURL" style="display:none">https://ygopro.us/setup.exe</span>
+                    <li><a href="http://ygopro.us/setup.exe">Windows Mirror 1 </a>
+                        <span itemprop="downloadURL" style="display:none">http://ygopro.us/setup.exe</span>
                         <span itemprop="fileSize" style="display:none">477MB</span>
                         <span itemprop="operatingSystem" style="display:none">Windows</span>
                         <span itemprop="SoftwarVersion" style="display:none">4.0.0</span>
                     </li>
-                    <li><a href=" https://ygopro.us/client.tar.gz">Win/Linux32 Tarball</a>
+                    <li><a href=" http://ygopro.us/client.tar.gz">Win/Linux32 Tarball</a>
                         <span itemprop="downloadURL" style="display:none">https://ygopro.us/client.tar.gz</span>
                         <span itemprop="fileSize" style="display:none">587MB</span>
                         <span itemprop="operatingSystem" style="display:none">Linux 32</span>
