--- a/server/http/index.html
+++ b/server/http/index.html
@@ -58,7 +58,7 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a href="http://fs1.d-h.st/download/00154/erg8/setup.exe">Full Windows Client </a>
+                    <li><a href="http://www.mediafire.com/download/4pbfs1cv1b67c8o/setup.exe">Full Windows Client </a>
                         
                     </li>
                     <!--<li><a href="http://ygopro.us/setup.exe">Windows Mirror 1 </a>
