Fixed up game list filter
Added "don't care" options as well as Name filter.

--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -140,6 +140,7 @@
                             <option value="1">TCG</option>
                             <option value="2" selected>OCG/TCG</option>
                             <option value="3">Anime</option>
+                            <option value="4">All</option>
                         </select>
                     </label>
                     <label>Round Type
@@ -147,6 +148,7 @@
                             <option value='0'>Single</option>
                             <option value='1'>Match</option>
                             <option value='2'>Tag</option>
+                            <option value="3">All</option>
                         </select>
                     </label>
                     <label>Banlist
@@ -171,10 +173,12 @@
                             <option value="17">Mega-Banned</option>
                             <option value="18" disabled>TBC</option>
                             <option value="19">N/A</option>
+                            <option value="20">All</option>
                         </select>
                     </label>
                     <label>Time Limit
                         <select id="filtertimelimit">
+                            <option value=0>Any</option>
                             <option value=3>3 Mins</option>
                             <option value=5>5 Mins</option>
                         </select>
