--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -275,6 +275,7 @@
     </footer>
     <script>
         $.getScript(sitelocationdir[mode] + "/js/launcher.js");
+        $.getScript(sitelocationdir[mode] + "/js/updatesystem.js");
     </script>
     <script>
         (function (i, s, o, g, r, a, m) {
