cache button, annoyance fixed

--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -241,6 +241,7 @@
                     <button onclick="applySettings();closeAllScreens()" style="color:black">Cancel</button>
                     <button onclick="locallogin(true);closeAllScreens()" style="color:black">Change Username</button>
                     <button onclick="createmanifest();closeAllScreens()" style="color:black">Update Launcher</button>
+                    <button onclick="require('nw.gui').App.clearCache();closeAllScreens()" style="color:black">Clear Cache</button>
                     <br />
                 </div>
             </div>
