--- a/server/http/ircbeta.html
+++ b/server/http/ircbeta.html
@@ -128,6 +128,8 @@
                 </li>
             </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 4 : Production 0 : Revision 1</div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+        <script src="js/irc-style-parser.js"></script>
         <div class="chatcontainer">
             <div class="chattitle">
                 title text
