--- a/server/http/index.html
+++ b/server/http/index.html
@@ -46,7 +46,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li>
-            <li><span class="psudolinksingle" onclick="singlesitenav('gamelist')">Game List</span>
+            <li><span class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
@@ -104,7 +104,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li>
-            <li><span class="psudolinksingle" onclick="singlesitenav('gamelist')">Game List</span>
+            <li><span class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
@@ -203,7 +203,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li>
-            <li><span class="psudolinksingle" onclick="singlesitenav('gamelist')">Game List</span>
+            <li><span class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
@@ -312,7 +312,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li>
-            <li><span class="psudolinksingle" onclick="singlesitenav('gamelist')">Game List</span>
+            <li><span class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
@@ -340,7 +340,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li>
-            <li><span class="psudolinksingle" onclick="singlesitenav('gamelist')">Game List</span>
+            <li><span class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
@@ -376,7 +376,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li>
-            <li><span class="psudolinksingle" onclick="singlesitenav('gamelist')">Game List</span>
+            <li><span class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
@@ -409,7 +409,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li>
-            <li><span class="psudolinksingle" onclick="singlesitenav('gamelist')">Game List</span>
+            <li><span class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
