placement of settings fix.

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -428,7 +428,7 @@
             <section id="settings">
                 <div class='section-content'>
 
-                    <div style="width:50%">
+                    <div style="width:50%; float:left;">
                         <h3>Game Settings</h3>
                         <label>Auto Card Placement</label>
                         <input type="checkbox" data-localhost="auto_card_placing" />
@@ -477,7 +477,7 @@
                         
                         <br />
                     </div>
-                    <div style="width:50%">
+                    <div style="width:50%; float:left;">
                         <label>Sound Volume</label>
                         <input type="range" min="0" max="100" value="50" id="sound_volume">
                         <br />
