--- a/server/http/index.html
+++ b/server/http/index.html
@@ -423,7 +423,7 @@
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('settings')">Settings</span>
             </li>
         </ul>
-        <h3>Game Settings</h3>
+        <h3 style="text-align:center; color:silver">Game Settings</h3>
         <div style="color:#a07; width:720px; margin:0 auto;">
             <section id="settings">
                 <div class='section-content'>
