--- a/server/http/index.html
+++ b/server/http/index.html
@@ -440,7 +440,7 @@
                         <input type="checkbox" data-localhost="auto_chain_order" />
                         <br />
                         <label>Enable Sound</label>
-                        <input type="checkbox" data-localhost="enable_music" />
+                        <input type="checkbox" data-localhost="enable_sound" />
                         <br />
                         <label>Enable DirectX</label>
                         <input type="checkbox" data-localhost="use_d3d" />
