--- a/server/http/index.html
+++ b/server/http/index.html
@@ -279,7 +279,7 @@
     </header>
     <header style="padding-top:50px" id="forum">
 
-        <iframe src="http://forums.ygopro.us" height="100%" width="100%" style="min-height: 422px; border: none;"></iframe>
+        <iframe src="http://forum.ygopro.us" height="100%" width="100%" style="min-height: 422px; border: none;"></iframe>
 
     </header>
     <header style="padding-top:50px" id="chat">
