--- a/server/http/index.html
+++ b/server/http/index.html
@@ -333,8 +333,8 @@
                         <label>Enable Music</label>
                         <input type="checkbox" data-localhost="enable_music" />
                         <br />
-                        <label>Fullscreen</label>
-                        <input type="checkbox" data-localhost="fullscreen" />
+                        <label style="display:none">Fullscreen</label>
+                        <input type="checkbox" data-localhost="fullscreen" style="display:none"/>
                         <br />
                         <label>Enable User Covers</label>
                         <input type="checkbox" data-localhost="enable_sleeve_loading" />
