--- a/server/http/index.html
+++ b/server/http/index.html
@@ -47,7 +47,7 @@
 
 <body>
     <div style="z-index:40; position:relative;">
-        <span class="psudolinksingle" onclick="singlesitenav('home')" id='psudologo' style='display:none;'>
+        <span class="psudolinksingle" onclick="singlesitenav('home')" id='psudologo'>
             <h1 style="font-size:1.2em">
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         </span>
