--- a/server/http/index.html
+++ b/server/http/index.html
@@ -454,6 +454,12 @@
                     });
                 }, 10000);
             }
+            $.getJSON('news.json',function(news){
+                $.getJSON('handlebars/news.handlebars',function(template){
+                    var parser = Handlebars.compile (template);
+                    $('#news #content').append (parser(news));
+                });
+            });
 
         });
     </script>
