--- a/server/http/index.html
+++ b/server/http/index.html
@@ -114,6 +114,7 @@
 
         <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 1 : Revision 0</div>
         <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
+        <div id="news"></div>
     </header>
     <header style="padding-top:50px" id="gamelist">
 
@@ -457,7 +458,7 @@
             $.getJSON('news.json',function(news){
                 $.getJSON('handlebars/news.handlebars',function(template){
                     var parser = Handlebars.compile (template);
-                    $('#news #content').append (parser(news));
+                    $('#news').append (parser(news));
                 });
             });
 
