--- a/server/http/index.html
+++ b/server/http/index.html
@@ -24,21 +24,16 @@
 
 
     <script>
-        function singlesitenav (target) {
+        function singlesitenav(target) {
             console.log(target, event)
-            if (launcher && target === 'forum'){
+            if (launcher && target === 'forum') {
                 event.preventDefault();
-            }else if (!launcher && target === 'forum'){
+            } else if (!launcher && target === 'forum') {
                 return true;
             }
             $('header').css('top', '100vh');
             $('#' + target).css('top', '0');
             saveSettings();
-            if (target = 'home') {
-                $('#psudologo').css('display', 'inline');
-            } else {
-                $('#psudologo').css('display', 'none');
-            }
             return false;
         }
     </script>
@@ -73,47 +68,44 @@
         </ul>
     </div>
     <header style="padding-top:50px;top:0vh;" id='home'>
-
-        <div style="font-size:1.2em">
-            <br />
-        </div>
-
-        <span class="psudolinksingle" onclick="singlesitenav('home')">
+        <div id="homecontainer">
+            <span class="psudolinksingle" onclick="singlesitenav('home')">
                 <h1 style="padding-top:140px;">
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
-        </span>
-        <h2>Online Yu-Gi-Oh! Simulator</h2>
-        <nav class="lander-main">
+            </span>
+            <h2>Online Yu-Gi-Oh! Simulator</h2>
+            <nav class="lander-main">
 
-            <div class="downloadbutton" style="display:none">Play Now</div>
+                <div class="downloadbutton" style="display:none">Play Now</div>
 
-            <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
-                <!--<li>Login</li>
+                <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
+                    <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                <li><a href="http://www.mediafire.com/download/4pbfs1cv1b67c8o/setup.exe">Full Windows Client </a>
+                    <li><a href="http://www.mediafire.com/download/4pbfs1cv1b67c8o/setup.exe">Full Windows Client </a>
 
-                </li>
-                <!--<li><a href="http://ygopro.us/setup.exe">Windows Mirror 1 </a>
+                    </li>
+                    <!--<li><a href="http://ygopro.us/setup.exe">Windows Mirror 1 </a>
                         
                     </li>-->
-                <li><a href=" http://ygopro.us/client.tar.gz">Linux32 TarGz</a>
+                    <li><a href=" http://ygopro.us/client.tar.gz">Linux32 TarGz</a>
 
-                </li>
-                <li><a href="http://ygopro.us/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
+                    </li>
+                    <li><a href="http://ygopro.us/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
 
-                </li>
-                <!--
+                    </li>
+                    <!--
                 <li><a href="http://salvationdevelopment.com/setup.msi"> Mirror 1</a></li>
                 <li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
                 <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
 
-            </ul>
+                </ul>
 
-        </nav>
+            </nav>
 
-        <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 1 : Revision 0</div>
-        <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
+            <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 1 : Revision 0</div>
+            <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
+        </div>
         <div id="news"></div>
     </header>
     <header style="padding-top:50px" id="gamelist">
@@ -334,7 +326,7 @@
                         <input type="checkbox" data-localhost="enable_music" />
                         <br />
                         <label style="display:none">Fullscreen</label>
-                        <input type="checkbox" data-localhost="fullscreen" style="display:none"/>
+                        <input type="checkbox" data-localhost="fullscreen" style="display:none" />
                         <br />
                         <label>Enable User Covers</label>
                         <input type="checkbox" data-localhost="enable_sleeve_loading" />
@@ -454,16 +446,16 @@
                     });
                 }, 10000);
             }
-            $.getJSON('news.json',function(news){
-                $.get('handlebars/news.handlebars',function(template){
-                    var parser = Handlebars.compile (template);
-                    $('#news').append (parser(news));
+            $.getJSON('news.json', function (news) {
+                $.get('handlebars/news.handlebars', function (template) {
+                    var parser = Handlebars.compile(template);
+                    $('#news').append(parser(news));
                 });
             });
-            $.getJSON('faq.json',function(news){
-                $.get('handlebars/faq.handlebars',function(template){
-                    var parser = Handlebars.compile (template);
-                    $('#faq #list').append (parser(news));
+            $.getJSON('faq.json', function (news) {
+                $.get('handlebars/faq.handlebars', function (template) {
+                    var parser = Handlebars.compile(template);
+                    $('#faq #list').append(parser(news));
                 });
             });
 
