--- a/server/http/index.html
+++ b/server/http/index.html
@@ -84,7 +84,7 @@
                     <li><a href="http://www.mediafire.com/download/4pbfs1cv1b67c8o/setup.exe">Full Windows Client </a>
 
                     </li>
-                    <li><a href="http://ygopro.us/salvation_setup.exe">Windows Mirror 1 </a>
+                    <li><a href="http://ygopro.us/setup.msi">Windows Mirror 1 </a>
                         
                     </li>
                     <li><a href=" http://ygopro.us/client.tar.gz">Linux32 TarGz</a>
