--- a/server/http/index.html
+++ b/server/http/index.html
@@ -81,12 +81,14 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a href="http://www.mediafire.com/download/4pbfs1cv1b67c8o/setup.exe">Full Windows Client </a>
+                    <li><a href="http://ygopro.us/setup.msi">Full Windows Client </a>
 
                     </li>
+<!--
                     <li><a href="http://ygopro.us/setup.msi">Windows Mirror 1 </a>
                         
                     </li>
+-->
                     <li><a href=" http://ygopro.us/client.tar.gz">Linux32 TarGz</a>
 
                     </li>
